RESOLVED - issue BATCH-383: Remove Java 5 features from samples http://jira.springframework.org/browse/BATCH-383